# yini-parser-python

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  Taskfile.yml  gitignore.txt  pyproject.toml
.github/workflows/: publish-to-pypi.yml  run-tests-fast.yml  run-tests-matrix.yml  run-tests.yml  yini-test-suite.txt  yini-test-suite.yml
docs/: Development-Setup.md  Maintainer-Doc.md
grammar/v1.0.0-rc.5x/: YiniLexer.g4  YiniParser.g4
grammar/v1.0.0-rc.5xx/: YiniParser.g4
sample/: basic.strict.yini
src/: dev.py  main.py
src/api/: errors.py  load.py
src/core/: VisitorInterp.py  parser_engine.py  yini_builder_visitor.py
src/yini_parser/: __init__.py
src/yini_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/yini_parser/api/: __init__.py  errors.py  load.py  warnings.py
src/yini_parser/core/: __init__.py  section_headers.py  validator.py  value_decoders.py  yini_builder_visitor.py
src/yini_parser/grammar/: README.md
src/yini_parser/utils/: __init__.py  antlr.py  text.py
tests/: test_adapter.py  test_comments.py  test_conflicts.py  test_fixtures_against_json.py  test_ignored_lines.py  test_inline_objects.py  test_keys.py  test_lenient_mode.py  test_load.py  test_parser_mode.py  test_samples_against_json.py  test_sections.py  test_strict_mode.py  test_string_concatenation.py  test_values.py
tests/fixtures/smoke-fixtures/: 1-web-server-configuration.smoke.json  10-logging-monitoring.smoke.json  11-system-config.smoke.json  12-python-project-metadata.smoke.yini  2-user-profile-settings.smoke.json  3-cli-application-options.smoke.json  4-build-project-configuration.smoke.json  5-database-connection.smoke.json  6-feature-flags-example.smoke.json  7-email-smtp-configuration.smoke.json  8-api-keys-integration.smoke.json  9-app-preferences.smoke.json
tools/: yini_parser_adapter.py
